manifest/objects/LVGO__Account__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__EML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_EML_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Earliest_Active_Initial_Launch_Date__c</fullName>
        <description>Roll Up Helper: MIN of Active Program Overview Initial Launch Date ; updated daily</description>
        <inlineHelpText>Roll Up Helper: MIN of Active Program Overview Initial Launch Date ; updated daily</inlineHelpText>
        <label>Earliest Active Initial Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Earliest_Closed_Won_Opportunity__c</fullName>
        <label>Earliest Closed Won Opportunity</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__CloseDate__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__EffectiveDate__c</fullName>
        <label>EffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Email_Coverage_Percentage_DM__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Email Coverage Percentage (DM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Email_Coverage_Percentage_HTN__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Email Coverage Percentage (HTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Employer_Identification_Number_EIN__c</fullName>
        <label>Employer Identification Number (EIN)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrolled_BG200__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrolled BG200</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrolled_BG300__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrolled BG300</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrolled_BG300i__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrolled BG300i</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Percentage_rPwDs__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrollment Percentage (rPwDs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Percentage_rPwDs_c__c</fullName>
        <label>Enrollment_Percentage_rPwDs__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Percentage_rPwHs__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Enrollment Percentage (rPwHs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Diabetes__c</fullName>
        <formula>LVGO__Covered_Lives__c  * 0.06</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Diabetes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Exclude_from_Inside_Sales_Lead_Gen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to exclude this prospect account from inside sales / lead generation activities. Maximum exclusion is 25 prospect accounts.</inlineHelpText>
        <label>Exclude from Inside Sales / Lead Gen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Exit_Interview_Doc_URL__c</fullName>
        <description>Part of JENGA:1539
CSMs can add a link to an Exit Interview document for clients that make the (poor) decision to term Livongo.</description>
        <label>Exit Interview Doc URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Expected_Client_Tier__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;Downmarket Client&quot;, &quot;Downmarket Client&quot;,
IF( LVGO__NumberOfEmployees__c &gt;9999, &quot;Tier 1&quot;,
IF( LVGO__NumberOfEmployees__c &gt;2499, &quot;Tier 2&quot;,
	&quot;Tier 3&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Client Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__External_tags__c</fullName>
        <label>External tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abacus_incentive</fullName>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>account_id</fullName>
                </value>
                <value>
                    <fullName>account_nbr</fullName>
                </value>
                <value>
                    <fullName>acct_name</fullName>
                </value>
                <value>
                    <fullName>acct_number</fullName>
                </value>
                <value>
                    <fullName>aco_status</fullName>
                </value>
                <value>
                    <fullName>active_coverage</fullName>
                </value>
                <value>
                    <fullName>additional_item_code</fullName>
                </value>
                <value>
                    <fullName>aetna_dob</fullName>
                </value>
                <value>
                    <fullName>aetna_first_name</fullName>
                </value>
                <value>
                    <fullName>aetna_last_name</fullName>
                </value>
                <value>
                    <fullName>aetna_middle_name</fullName>
                </value>
                <value>
                    <fullName>alight_id</fullName>
                </value>
                <value>
                    <fullName>alight_internal_id</fullName>
                </value>
                <value>
                    <fullName>ALLDC</fullName>
                </value>
                <value>
                    <fullName>alpha-prefix</fullName>
                </value>
                <value>
                    <fullName>alpha_prefix</fullName>
                </value>
                <value>
                    <fullName>altempid</fullName>
                </value>
                <value>
                    <fullName>alter_id</fullName>
                </value>
                <value>
                    <fullName>alt_id</fullName>
                </value>
                <value>
                    <fullName>arkema</fullName>
                </value>
                <value>
                    <fullName>BCBS_ALLOCATED_PLAN_CODE</fullName>
                </value>
                <value>
                    <fullName>bcbs_group_id</fullName>
                </value>
                <value>
                    <fullName>bcbs_subscriber_id</fullName>
                </value>
                <value>
                    <fullName>BDHEALTHYLIVES</fullName>
                </value>
                <value>
                    <fullName>benefit_id</fullName>
                </value>
                <value>
                    <fullName>billing_id</fullName>
                </value>
                <value>
                    <fullName>bill_level1</fullName>
                </value>
                <value>
                    <fullName>bill_level2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LVGO__Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Fortune_1000_Rank__c</fullName>
        <label>Fortune 1000 Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Fortune_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This organization is a Fortune 100 Company (by employee size)</description>
        <label>Fortune 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a Fortune 500 organization by employee size</description>
        <label>Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fully_Insured_Population__c</fullName>
        <label>Fully Insured Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Global_Employees__c</fullName>
        <label>Global Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Google_Slides_Strategic_Plan_URL__c</fullName>
        <label>Account Review URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__HP_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HP CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_HP_CSM_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__HSS_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HSS Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_HSS_AccountExecutive_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Historic_notes_if_not_in_Salesforce__c</fullName>
        <description>A place where CI/CS can link to historic Account notes if not migrated to Salesforce</description>
        <inlineHelpText>Link to historic Account notes here (if not migrated to Salesforce)</inlineHelpText>
        <label>Historic notes (if not in Salesforce)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Ignore_all_CSM_mirroring_effects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ask your System Admin to check/uncheck this box.</description>
        <inlineHelpText>Ask your System Admin to check/uncheck this box.</inlineHelpText>
        <label>Ignore all CSM mirroring effects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Impending_Client_Termination_Date__c</fullName>
        <inlineHelpText>Only select a date for this field if a client has informed us they intend to terminate their agreement</inlineHelpText>
        <label>Impending Client Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Incentives_Content_Guides_SPA__c</fullName>
        <label>Incentives: Content Guides - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Incentives_Gift_Cards_SPA__c</fullName>
        <label>Incentives: Gift Cards - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Incentives_Goods_and_Services_SPA__c</fullName>
        <label>Incentives: Goods and Services - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Industry_c__c</fullName>
        <label>Industry (c)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Insurer_Code__c</fullName>
        <label>Insurer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_this_account_a_Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this account is a strategic account. VP of Strategic Accounts to own outreach, strategy, etc...</description>
        <inlineHelpText>Check this box if this account is a strategic account. VP of Strategic Accounts to own outreach, strategy, etc...</inlineHelpText>
        <label>Is this account a Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Jigsaw__c</fullName>
        <label>Jigsaw</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Activity_Completed_Date_by_Sales__c</fullName>
        <formula>IF(
AND(ISBLANK(LVGO__Last_Event_Completed_Date_by_Sales_Rep__c),ISBLANK(LVGO__Last_Task_by_Sales_Rep_Completed_Date__c)),
NULL,
IF( BLANKVALUE(LVGO__Last_Task_by_Sales_Rep_Completed_Date__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)) &lt; BLANKVALUE(LVGO__Last_Event_Completed_Date_by_Sales_Rep__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)) , LVGO__Last_Event_Completed_Date_by_Sales_Rep__c , LVGO__Last_Task_by_Sales_Rep_Completed_Date__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Completed Date by Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Activity_by_Livongo_Rep__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Last Activity by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Event_Completed_Date_by_Sales_Rep__c</fullName>
        <label>Last Event Completed Date by Sales Rep</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Event_by_Livongo_Rep__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Last Event by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Task_Event_by_Livongo_Rep__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(LVGO__Last_Event_by_Livongo_Rep__c),
        ISBLANK(LVGO__Last_Activity_by_Livongo_Rep__c)
       ),
    NULL,
    DATE(1900, 01, 01) +
    MAX(
        BLANKVALUE(
            LVGO__Last_Event_by_Livongo_Rep__c, 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            LVGO__Last_Activity_by_Livongo_Rep__c ,
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)
    )
)</formula>
        <label>Last Task/Event by Livongo Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Task_by_Sales_Rep_Completed_Date__c</fullName>
        <label>Last Task by Sales Rep Completed Dat</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Updated_ECS_DateTime__c</fullName>
        <label>Last Updated ECS DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Updated_ECS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Updated Enrollment Communication Survey</description>
        <inlineHelpText>Last Updated Enrollment Communication Survey</inlineHelpText>
        <label>Last Updated ECS</label>
        <referenceTo>LVGO__Enrollment_Communications_Survey__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Latest_Closed_Won_Opp_Date__c</fullName>
        <label>Latest Closed Won Opp Date</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__CloseDate__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_Financial_Impact_ROI_Actual__c</fullName>
        <inlineHelpText>Updated by Client Success. If you see a problem, please contact the Account&apos;s CSM.</inlineHelpText>
        <label>Livongo Financial Impact (ROI) - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Location_Size_Accuracy__c</fullName>
        <externalId>true</externalId>
        <label>Location Size Accuracy</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Location_Size_Unit_of_Measure__c</fullName>
        <externalId>true</externalId>
        <label>Location Size Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Location_Size__c</fullName>
        <label>Location Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__MD_Personator_Results__c</fullName>
        <label>MD Personator Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Marketing_Account_SubType__c</fullName>
        <label>Marketing Account Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health Provider</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Fully Insured Employer</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
                <value>
                    <fullName>Labor/Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Managed Care Organization</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Ops Partner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>PBM</fullName>
                </value>
                <value>
                    <fullName>Self Funded Employer</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Marketing_Account_Type__c</fullName>
        <description>First/top level layer of account segmentation for channel marketing</description>
        <inlineHelpText>First/top level layer of account segmentation for channel marketing</inlineHelpText>
        <label>Marketing Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Medicaid_Population__c</fullName>
        <label>Medicaid Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Medicare_Advantage__c</fullName>
        <label>Medicare Advantage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Member_NPS__c</fullName>
        <description>Summary of Member-level NPS score</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Member NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Member_recruitment_began__c</fullName>
        <label>Member recruitment began</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Members_Enrolled__c</fullName>
        <label>Participants Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Microsoft_Teams_CCM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Teams CCM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Microsoft_Teams_Date_Enabled__c</fullName>
        <label>Microsoft Teams Date Enabled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Microsoft_Teams_Launch_Type__c</fullName>
        <label>Microsoft Teams Launch Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Push Install - All US</fullName>
                </value>
                <value>
                    <fullName>Push Install - Recruitables Only</fullName>
                </value>
                <value>
                    <fullName>Enablement Only</fullName>
                </value>
                <value>
                    <fullName>Enablement + Announcement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Migrated_myStrength_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denote the migrated mystrength accounts</description>
        <label>Migrated myStrength Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Most_Recent_Event_by_Sales_Rep__c</fullName>
        <label>Most Recent Event by Sales Rep</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Most_Recent_Task_Event_by_Sales_Rep__c</fullName>
        <formula>IF(
AND(ISBLANK(LVGO__Most_Recent_Event_by_Sales_Rep__c),ISBLANK(LVGO__Most_Recent_Task_by_Sales_Rep__c)),
NULL,
IF( BLANKVALUE(LVGO__Most_Recent_Event_by_Sales_Rep__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)) &lt; BLANKVALUE(LVGO__Most_Recent_Task_by_Sales_Rep__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)) , LVGO__Most_Recent_Task_by_Sales_Rep__c, LVGO__Most_Recent_Event_by_Sales_Rep__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Task/Event by Sales Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Most_Recent_Task_by_Sales_Rep__c</fullName>
        <label>Most Recent Task by Sales Rep</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__NAICS_Industry_Classification__c</fullName>
        <label>NAICS Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment and Recreation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Truck, Utility Trailer, and RV (Recreational Vehicle) Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Unclassified Establishments</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Next_Business_Review__c</fullName>
        <label>Next Business Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfEmployees__c</fullName>
        <label>NumberOfEmployees</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Number_of_POs__c</fullName>
        <label>Number of POs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>